--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         </google-map>
         <form class="form-horizontal" role="form">
           <div class="form-group">
-            <label for="origin" class="col-sm-2 control-label">Origin</label>
+            <label for="origin" class="col-sm-2 control-label">Origin:</label>
             <div class="col-sm-8">
               <input type="text" id="origin" class="form-control" ng-model="directions.origin" />
             </div>
           </div>
           <div class="form-group">
-            <label for="destination" class="col-sm-2 control-label">Destination</label>
+            <label for="destination" class="col-sm-2 control-label">Destination:</label>
             <div class="col-sm-8">
               <input type="text" id="destination" class="form-control" ng-model="directions.destination" />
             </div>
